--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,9 +1,10 @@
 .pettycash-container {
-  padding: 25px;
+  /* padding: 25px; */
   border-radius: 10px;
   /* width: 500px; */
   margin: auto;
-  height: 500px;
+
+  height: 659px;
 
   /* background-color: rgba(255, 255, 255, 0.8); */
   box-sizing: border-box;
